fixed things in tex version

--- a/main.tex
+++ b/main.tex
@@ -257,23 +257,32 @@ analysis. The message reads \emph{P(FBD.t:concat) = -Infinity}, showing
 that the issue likely appears in the calculation of the FBD likelihood.
 The FBD prior is a tree prior, and depends on the tree as well as
 several other parameters, so there are several possible causes for the
-calculation issue: - a bug in the likelihood calculation itself: BEAST2
-packages can contain calculation issues which have been undetected so
-far (especially if they only appear in very specific circumstances), in
-which case they should be reported to the development team. However,
-this is unlikely in our case, as the FBD model has been extensively used
-without issue in previous analyses, and our analysis setup is similar to
-previous analyses. - an issue with the initial tree: the inference will
-not start if the provided initial tree is impossible under the specified
-tree model or doesn't match with the provided MRCA constraints. By
-default, most analyses use a random tree simulated by the inference,
-which will fulfill all constraints. However, with more complex models or
-constraints, the simulation process can fail to find a good tree, in
-which case a valid starting tree needs to be provided by the user. - an
-issue with the initial values of the parameters: if the initial values
-set in the analysis are very far from plausible, the resulting
-likelihood of the model will be extremely small, which gets recorded as
-\emph{-Infinity} by BEAST2.
+calculation issue:
+
+\begin{itemize}
+
+\item
+  a bug in the likelihood calculation itself: BEAST2 packages can
+  contain calculation issues which have been undetected so far
+  (especially if they only appear in very specific circumstances), in
+  which case they should be reported to the development team. However,
+  this is unlikely in our case, as the FBD model has been extensively
+  used without issue in previous analyses, and our analysis setup is
+  similar to previous analyses.
+\item
+  an issue with the initial tree: the inference will not start if the
+  provided initial tree is impossible under the specified tree model or
+  doesn't match with the provided MRCA constraints. By default, most
+  analyses use a random tree simulated by the inference, which will
+  fulfill all constraints. However, with more complex models or
+  constraints, the simulation process can fail to find a good tree, in
+  which case a valid starting tree needs to be provided by the user.
+\item
+  an issue with the initial values of the parameters: if the initial
+  values set in the analysis are very far from plausible, the resulting
+  likelihood of the model will be extremely small, which gets recorded
+  as \emph{-Infinity} by BEAST2.
+\end{itemize}
 
 To inspect the starting values and find the issue, we will first load
 the file into BEAUti.
@@ -720,13 +729,6 @@ mind}\label{further-things-to-keep-in-mind}}
   sampling from the prior.
 \end{itemize}
 
-\hypertarget{bonus-troubleshooting-a-complex-analysis}{%
-\subsubsection{Bonus: troubleshooting a complex
-analysis}\label{bonus-troubleshooting-a-complex-analysis}}
-
-In this tutorial, we have used a toy example, but it is important to
-keep in mind that real analyses may be much more complex.
-
 \hypertarget{useful-links}{%
 \section{Useful Links}\label{useful-links}}
 
@@ -756,9 +758,6 @@ keep in mind that real analyses may be much more complex.
 %%%%%%%%%%%%%%%%%%%%
 Version dated: \today
 
-
-
-\newpage
 
 %%%%%%%%%%%%%%%%
 %  REFERENCES  %
