--- a/preamble.tex
+++ b/preamble.tex
@@ -24,6 +24,7 @@
 \usepackage{lmodern}
 \usepackage[utf8]{inputenc}
 \usepackage[]{listings}
+\newcommand{\passthrough}[1]{#1}
 %\usepackage{fontspec}
 \usepackage{placeins}
 \usepackage{epstopdf}
